<resources>

    <string name="app_name">Faturei</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Faturei</string>
    <string name="chip">chip</string>
    <string name="ver_fatura">Ver Fatura</string>
    <string name="incluir_compra">Incluir Compra</string>
    <string name="title_activity_incluir_compra">Faturei - Incluir Compra</string>
    <string name="voltar">Voltar</string>
    <string name="parcelado">Parcelado</string>
    <string name="dia">Dia</string>
    <string name="mes">Mês</string>
    <string name="ano">Ano</string>
    <string name="valor">Valor</string>
    <string name="incluir">Incluir</string>
    <string name="no_vezes">Nº Vezes</string>
    <string name="title_activity_ver_fatura">Faturei - Ver Fatura</string>
    <string name="limpar">limpar</string>
    <string name="ok">OK</string>
    <string name="configuracoes">Configurações</string>
    <string name="title_activity_configuracoes">Faturei - Configuracoes</string>
    <string name="adicionarcartao"><b>Adicionar Cartao</b></string>
    <string name="nomeCartao">Nome do Cartão</string>
    <string name="vencimento">Vencimento</string>
    <string name="excluir">Excluir</string>
    <string name="excluircartao"><b>Excluir Cartao</b></string>
    <string name="dataFechamento">Data de Fechamento da Fatura</string>
    <string name="diaFechamento">Dia de Fechamento da Fatura</string>
    <string name="menos">-</string>
    <string name="mais">+</string>
    <string name="excluirCompra"><b>Excluir Compra</b></string>
    <string name="adicionaralterarcartao">Adicionar/Alterar Cartão</string>
    <string name="total"><b>Total</b></string>
    <string name="teste">Teste</string>
    <color name="black">#000000</color>
    <string name="refresh">Atualizar</string>
    <integer-array name="parcelas">
        <item>1</item>
        <item>2</item>
    </integer-array>
    <string name="semcompras">Sem Histórico de Compras</string>
    <string name="info">Info</string>
    <string name="faturaproxmes">Fatura para</string>
    <color name="red">#FF0000</color>
    <string name="parcelas">Parcelas</string>
    <string name="datacompra">Data</string>
    <string name="small">small</string>
    <string name="normal">normal</string>
    <string name="cartao">Cartão</string>
    <string name="descricao">Descrição</string>
    <string name="exportar">Exportar</string>
    <string name="importar">Importar</string>

</resources>