<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/chip"
        android:src="@drawable/chip" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView1"
        android:layout_marginBottom="20dp"
        android:text="@string/voltar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/valor" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/imageView1"
        android:layout_below="@id/textView4"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <DatePicker
        android:id="@+id/dataCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/editText1"
        android:layout_below="@id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />
        
    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/dataCompra"
        android:layout_below="@id/dataCompra"
        android:layout_marginTop="20dp"
        android:onClick="parcelado"
        android:text="@string/parcelado" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox1"
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_alignTop="@id/checkBox1"
        android:layout_below="@id/dataCompra"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/checkBox1"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner4"
        android:layout_alignLeft="@+id/spinner4"
        android:text="@string/no_vezes"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/checkBox1"
        android:layout_below="@+id/checkBox1"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/descricaoEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/spinner5"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="text" />
    
    <Button
        android:id="@+id/button2"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_below="@id/descricaoEditText"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="11dp"
        android:onClick="incluir"
        android:text="@string/incluir" />

</RelativeLayout>
